[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/MainMenuUI/Submenus/ConfigMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Menu/Menu_Backdrop_07.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/ChunkyPixelsNormal.tres" type="DynamicFont" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -104.0
margin_right = 152.0
margin_bottom = 104.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 44.0
margin_top = 57.0
margin_right = 290.0
margin_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModifyControls" type="MenuButton" parent="TextureRect/VBoxContainer"]
margin_top = 14.0
margin_right = 246.0
margin_bottom = 34.0
focus_neighbour_top = NodePath("../QuitGame")
focus_mode = 2
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0980392, 0.85098, 0.886275, 1 )
enabled_focus_mode = 2
text = "Modify Controls"
switch_on_hover = true

[node name="ChangeMusicVolume" type="MenuButton" parent="TextureRect/VBoxContainer"]
margin_top = 38.0
margin_right = 246.0
margin_bottom = 58.0
focus_mode = 2
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0980392, 0.85098, 0.886275, 1 )
enabled_focus_mode = 2
text = "Change Music Volume"
switch_on_hover = true

[node name="ChangeSFXVolume2" type="MenuButton" parent="TextureRect/VBoxContainer"]
margin_top = 62.0
margin_right = 246.0
margin_bottom = 82.0
focus_mode = 2
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0980392, 0.85098, 0.886275, 1 )
enabled_focus_mode = 2
text = "Change SFX Volume"
switch_on_hover = true

[node name="QuitGame" type="MenuButton" parent="TextureRect/VBoxContainer"]
margin_top = 86.0
margin_right = 246.0
margin_bottom = 106.0
focus_neighbour_bottom = NodePath("../ModifyControls")
focus_mode = 2
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.898039, 0.247059, 0.247059, 1 )
enabled_focus_mode = 2
text = "Quit Game"
switch_on_hover = true
